modify build script

--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "cookbook",
   "version": "1.0.0",
   "description": "Recipe application",
-  "default":"index.html",
+  "default": "index.html",
   "browserslist": [
     "defaults"
   ],
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html --dist-dir ./dist --no-scope-hoist"
   },
   "author": "Chaymae Benayad",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
+    "fractional": "^1.0.0",
     "parcel": "^2.7.0"
   },
   "dependencies": {
     "core-js": "^3.25.4",
-    "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.9"
   }
 }
